<resources>
    <string name="app_name">Good Luck 24</string>
    <string name="app_name_part_one">Good</string>
    <string name="app_name_part_two">Luck</string>

    <!-- Customerly App Id -->
    <string name="customerly_app_id">xxxxxxxxxx</string>

    <!-- RazorPay Api Key -->
    <string name="razorpay_api_key" translatable="false">rzp_live_xxxxxxxxxxx</string>

    <!-- ********************* No Need change below value  ************************* -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_my_ticket">My Tickets</string>
    <string name="menu_history">History</string>
    <string name="menu_refer_earn">Refer &amp; Earn</string>
    <string name="menu_report_an_issue">Report an issue</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_terms">Terms &amp; Conditions</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="logout">Logout</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="terms_and_conditions_link"><u>Terms And Condition</u></string>

    <string name="shopping">&#160;Shopping</string>
    <string name="flutterwave">Flutterwave</string>
    <string name="order_placed">Balance Added!!!</string>
    <string name="order_error">Error while payment!!!</string>
    <string name="order_cancel">Cancel payment!!!</string>
</resources>
