<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_part_one"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_part_two"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <EditText
                android:visibility="gone"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:background="@drawable/button_background"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icons8_user_24"
                android:hint="Full Name"
                android:padding="13dp"
                android:drawableTint="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/cntrno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="7dp"
                    android:textSize="14sp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_contentColor="#242627"
                    app:ccp_defaultPhoneCode="44"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textSize="14sp" />

                <EditText
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/cntrno"
                    android:background="@android:color/transparent"
                    android:hint="Mobile number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="14sp" />
            </RelativeLayout>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icons8_lock_24_fil"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textSize="14sp" />

            <EditText
                android:visibility="gone"
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/icons8_lock_24_fil"
                android:drawablePadding="10dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/refer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:background="@drawable/button_background"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icons8_user_account_24"
                android:hint="Referral code (Optional)"
                android:padding="13dp"
                android:drawableTint="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textinput_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="140dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="Signup"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="By clicking signup you accept"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/terms_and_conditions_link"
                android:textSize="16sp"
                android:textColor="@color/yellow"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>